Updated Settings CSS to resemble wireframe more and made a few tweaks to the business page to make the added posting section fit. There is an issue with the posts section not meeting the footer; there is a wide gap between them that I'm having difficulty resolving.

--- a/ernie-eats-frontend/CSS/generalsettings.css
+++ b/ernie-eats-frontend/CSS/generalsettings.css
@@ -4,7 +4,8 @@
     grid-template-columns: 10vw auto auto;
     grid-template-rows: auto auto auto;
     column-gap: 50px;
-    height: 100vh; 
+    height: 100vh;
+    background-color: white;
 }
 
 body.dark-mode {
@@ -19,7 +20,6 @@ body.dark-mode {
     grid-row-end: 4;
     background-color: #686868;
     max-height: 100vh;
-    
 }
 
 .center {
@@ -38,11 +38,12 @@ body.dark-mode {
 }
 
 img {
-    height:100px;
-    width:100px;
-    padding-left: 35px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    scale: 48%;
+    margin-left: -35px;
+    position: relative;
+    top: -48px;
+    border-radius: 50%;
+    background-color: #686868;
 }
 
 .sidebar button {
@@ -50,25 +51,25 @@ img {
     align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    display: block; 
-    width: 100%; 
-    padding: 10px; /* Add padding for spacing between buttons */
-    margin-bottom: 10px; /* Add margin to separate buttons vertically */
-    background-color: #555; 
-    color: #fff; 
+    display: block;
+    width: 100%;
+    padding: 25px;
+    position: relative;
+    top: -100px;
+    /* Add padding for spacing between buttons */
+    margin-bottom: 0px;
+    /* Add margin to separate buttons vertically */
+    background-color: #686868;
+    color: #fff;
     border: none;
-    text-align: left; 
-}
-    
-.sidebar button:hover {
-    background-color: #94270c;
-    color:white
+    text-align: left;
+    font-size: 16px;
 }
 
+
 .save-button {
-    background-color: #4CAF50; 
+    background-color: #4CAF50;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -82,7 +83,7 @@ img {
 }
 
 .cancel-button {
-    background-color: #f44336; 
+    background-color: #f44336;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -94,8 +95,9 @@ img {
     cursor: pointer;
     border-radius: 5px;
 }
+
 .save-button-profile {
-    background-color: #4CAF50; 
+    background-color: #4CAF50;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -112,7 +114,7 @@ img {
 }
 
 .cancel-button-profile {
-    background-color: #f44336; 
+    background-color: #f44336;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -126,7 +128,6 @@ img {
     position: absolute;
     left: 25%;
     top: 93%;
-    
 }
 
 .save-button-profile:hover {
@@ -170,18 +171,18 @@ input#theme-switch {
     border-radius: 34px;
 }
 
-#themeLabel:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 50%;
-}
+    #themeLabel:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+        border-radius: 50%;
+    }
 
 input:checked + #themeLabel {
     background-color: #2196F3;
@@ -190,7 +191,7 @@ input:checked + #themeLabel {
 input:focus + #themeLabel {
     box-shadow: 0 0 1px #2196F3;
 }
-  
+
 input:checked + #themeLabel:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
@@ -202,12 +203,11 @@ input:checked + #themeLabel:before {
     position: relative;
     width: 60px;
     height: 30px;
-    
 }
 
-.switch input {
-    display: none;
-}
+    .switch input {
+        display: none;
+    }
 
 .slider {
     position: absolute;
@@ -221,25 +221,26 @@ input:checked + #themeLabel:before {
     transition: 0.4s;
 }
 
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 2px;
-    bottom: 2px;
-    background-color: white;
-    border-radius: 50%;
-    transition: 0.4s;
-}
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 2px;
+        bottom: 2px;
+        background-color: white;
+        border-radius: 50%;
+        transition: 0.4s;
+    }
 
 input:checked + .slider {
     background-color: #2196F3;
 }
 
-input:checked + .slider:before {
-    transform: translateX(26px);
-}
+    input:checked + .slider:before {
+        transform: translateX(26px);
+    }
+
 
 .label {
     margin-left: 10px;
@@ -247,6 +248,48 @@ input:checked + .slider:before {
     vertical-align: middle;
 }
 
-.theme-toggle h2{
+.theme-toggle h2 {
     text-align: left;
+}
+
+.tab.active {
+    background-color: #94270c;
+    color: #fff;
+}
+
+input[type=text] {
+    border: none;
+    border-bottom: 2px solid #94270c;
+}
+
+input[type=textarea] {
+    border: none;
+    border: 2px solid #94270c;
+    width: 400px;
+    height: 100px;
+    border-radius: 3px;
+}
+
+input[type=text]:focus {
+    outline: none;
+}
+
+input[type=textarea]:focus {
+    outline: none;
+}
+
+
+.content-alignment {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 50px 100px;
+}
+
+.form-group {
+    width: 400px
+}
+
+#aboutDescription {
+    font-family: 'Open Sans', sans-serif;
+    border: 2px solid #94270c;
 }
